static/style.css
body { 
    padding-top: 56px; 
    background-color: #D9F0EF;
    font-family: 'Lato', sans-serif;
    /* font-weight: 100; */
}

.left-aligned { 
    margin-left: auto; 
}
.bg-dark { 
    background-color: #EE8A8B !important; 
}
.bg-hero { 
    background-color: #45b06cff; 
}

/* CALLOUT */
.bd-callout { 
    padding:1.25rem; margin-top:1.25rem; margin-bottom:1.25rem; border:1px solid #e9ecef; border-left-width:.25rem; border-radius:.25rem 
}
.bd-callout h4 { 
    margin-bottom:.25rem 
}
.bd-callout p:last-child { 
    margin-bottom:0 
}
.bd-callout code { 
    border-radius:.25rem 
}
.bd-callout+.bd-callout { 
    margin-top:-.25rem 
}
.bd-callout-info { 
    border-left-color:#5bc0de
 }
.bd-callout-warning {
    border-left-color:#f0ad4e 
}
.bd-callout-danger {
    border-left-color:#d9534f 
}

/* footer */
footer a { 
    color: white; font-weight: bold; text-decoration: none; 
}
footer a:hover { 
    color: white; text-decoration: underline;
}

/* Page styles */

.header-text {
    font-size: 70px;
    background-color: #EBF7F7;
    color: #FFD972;
    font-style: italic;
    font-weight: bold;
    text-align: center;
    letter-spacing: 2px;
    padding-bottom: 1rem;
    width: 700px;
    height: 100px;
    text-shadow: 1px 3px 8px rgba(80, 96, 100, 0.521);
}

.subheader {
    font-size: 40px;
    background-color: #FFF7F7;
    color: #EE8A8B;
    font-weight: 900;
    text-align: center;
    font-style: italic;
    width: fit-content;
    border-radius: 10px;
    padding: 15px;
    padding-top: 5px;
    padding-bottom: 7px;
    margin-bottom: 1rem;
    text-shadow: 1px 3px 3px rgba(80, 96, 100, 0.209);
}

.subheader_small {
    font-size: 25px;
    background-color: #FFF7F7;
    color: #EE8A8B;
    font-weight: 600;
    text-align: center;
    font-style: normal;
    width: fit-content;
    border-radius: 10px;
    padding: 15px;
    padding-top: 5px;
    padding-bottom: 7px;
    margin-top: 20px;
    margin-bottom:10px;
}

.exp_div {
    background-color: #FBC1BD;
    color: #FFFFFF;
    border-radius: 30px;
    padding: 40px;
    padding-top: 30px;
    padding-bottom: 20px;
    tab-size: 10;
    float:right;
    overflow-wrap: break-word;
}

/* ToC styles */
/* ToC styles */
.toc-header {
    background: #EE8A8B;
    padding: 5px 5px 0;
    border-radius: 15px 15px 0 0;
    min-height: 50px;
    display: flex;
    align-items: center;
}

.toc-heading {
    font-size: 20px;
    color: #fff;
    margin: 0;
    text-align: left;
    width: 100%;
    font-weight: 600;
    padding: 0 20px 0;
}

.toc-list-wrapper {
    position: -webkit-sticky; 
    position: sticky;
    top: 15vh; /* note: this decides place on screen. for smaller toc we might want to make this bigger (so it fits in middle) */
    max-height: calc(100vh - 20px); 
    overflow-y: auto;
}

.toc-list {
    border-radius: 0 0 15px 15px;
    background: #EE8A8B;
    margin: 0;
    list-style: none;
    padding: 0 17px;
    font-size: 15px;
    padding-bottom: 10px;
}

.toc-list-header a {
    position: relative;
    color: #fff;
    text-decoration: none;
    font-weight: 600;
    display: block;
    padding: 10px;
    border-radius: 10px;
    cursor: pointer;
    transition: .2s ease;
    font-size: 15px;
}

.toc-list-item a:hover,
.toc-list-header a:hover {
    box-shadow: 0 8px 15px rgb(246 90 100 / .55);
    background: #FBC1BD;
    color: #fff;
    border-radius: 10px;
}

.toc-list-items {
    list-style: none;
    padding-left: 30px;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.4s ease;
}

.show {
    max-height: 500px;
}

.navbar {
    z-index: 9999;
}

.book {
    margin: 15px auto 40px auto;
    width: fit-content;
    height: 300px;
    position: relative;
    transition: width 0.5s ease;
  }

.pages {
    height: 100%;
    position: relative;
}

.page {
    width: 530px;
    height: 640px; 
    position: absolute;
    top: 0;
    left: 0;
    border-radius: 7mm;
    margin: 0 6px;
    transform-style: preserve-3d;
    transform-origin: left;
    transition: 0.27s;
    box-shadow: 1px 2px 0 0 rgba(0,0,0,0.15), 1px 3px 1px 0 rgba(0,0,0,0.1);
}

.page-side {
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    padding: 45px 30px;
    display:flex;
    align-items: flex-start;
    justify-content: center;
    flex-direction: column;
    border-radius: 7mm;
    position: absolute;
    top: 0;
    left: 0;
    backface-visibility: hidden;
}

  .page-header {
    text-align: center;
    padding-left: 25%;
  }

  .page-title {
    width: 100%;
    align-items: center;
    margin: 0;
    width: fit-content;
    padding: 0 15px 0px 15px;
    border-radius: 4px;
    text-align: center;
    justify-content: space-between;
    font-size: 30px;
    font-weight: 700;
    font-style: italic;
    letter-spacing: 1px;
    background-color: #C5E7E7;
  }

  .page-subtitle {
    margin-top: 8px;
    font-size: 15px;
    /* font-weight: 400; */
  }

  .page-content {
    flex-grow: 1;
    font-size: 14px;
    display: flex;
    flex-direction: column;
    padding-top: 12px;
  }

  .page-footer {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-top: 15px;
    font-size: 14px;
  }

  .pg-no {
    padding: 0 5px;
    height: 20px;
    line-height: 20px;
    text-align: center;
    background: white;
    border-radius: 3mm;
  }

  .front {
    background: #E9F6F5;
    color: #4BA7A7;
    padding-left: 40px;
  }

  .back {
    background: #E9F6F5;
    color: #4BA7A7;
    padding-right: 40px;
    transform: rotateY(180deg);
  }

  .beads {
    position: absolute;
    top: 0;
    left: -12px;
    height: 560px;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-direction: column;
    z-index: 9998;
  }

  .bead {
    width: 36px;
    height: 12px;
    background: #FFD972;
    box-shadow: 
        1px 2px 0 0 rgba(0,0,0,0.15), 
        1px 3px 1px 0 rgba(0,0,0,0.1);
    border-radius: 5mm;
    z-index: 9999;
  }

  .controls {
    width: 350px;
    height: fit-content;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 360px auto 0px auto;
    /* margin-left: 37%; */
    padding-bottom: 10px;
  }

  .controls button {
    background: #C5E7E7;
    color: #4BA7A7;
    width: 40px;
    height: 40px;
    font-weight: bold;
    font-size: large;
    border: 0.4mm solid #4BA7A7;
    border-radius: 70%;
    outline: none;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
  }

  .controls button :hover {
    color: #286969;
  }

 .page-side#highlight {
    background-color: #EE8A8B;
 } 

 /* Accomplishments for the day */
 .nb-acc {
    padding-right: 20px;
    width: fit-content;
    color: #EE8A8B;
    float: left;
 }
 
 .nb-main {
    margin-top: 5px;
 }

 .page-content .highlight {
    font-weight: 800;
    font-size: 16px;
    margin-bottom: 5px;
 }

 .nb-acc ul {
    font-size: 15px;
    width: fit-content;
    background-color: #F5FAFF;
    margin-bottom: 0;
    padding-left: 20px;
    margin-left: 20px;
    padding-right: 20px;
}

.nb-main .text {
    width: 95%;
    font-size: 13px;
    background-color: #F5FAFF;
    margin-left: 20px;
    margin-bottom: 10px;
    padding: 2px;
    padding-left: 5px;

}

.nb-wrapper {
    background-color:#FFD972;
    width: auto;
    height: fit-content;
    align-items: center;
    flex-direction: column;
    position: relative;
    padding-top: 1px;
    border-radius: 36px;
}

.nb-toc {
    margin: 20px;
    float: left;
    width: 15%;
}

.nb-toc .toc-list{
    color: #C5E7E7;
}

.bookmark {
    position:absolute;
    top:0;
    margin-left: 20px;
    padding: 0;
}

